--- a/loginpage/index.html
+++ b/loginpage/index.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+	<html>
+		<head><title>Projects by Avic0des</title>
+			<link rel="stylesheet" href="css.css" type="text/css">
+		</head>
+		<body>
+			<div class="abox">
+				<p><h1>This is list of projects made by me</h1></p>
+				<ol>
+					<li><a href="loginpage/index.html">Login Page</a></li>
+				</ol>
+			</div>
+		</body>
+	</html>
+			
+		
