--- a/loginpage/index.html
+++ b/loginpage/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 	<html>
-		<head><title>Projects by Avic0des</title>
-			<link rel="stylesheet" href="css.css" type="text/css">
+		<head>
+			<title>This is a webpage</title>
+			<link href="css.css" type="text/css" rel="stylesheet">.
 		</head>
 		<body>
-			<div class="abox">
-				<p><h1>This is list of projects made by me</h1></p>
-				<ol>
-					<li><a href="loginpage/index.html">Login Page</a></li>
-				</ol>
+			<div class="box">
+				<ul>
+					<li>Home</li>
+					<li>About us</li>
+					<li>Login</li>
+					<li>Sign up</li>
+				</ul><br><br>
+				<p>Please Enter your username and password</p>
+				<label for="usr"><b>Username:</b><label>
+				<input type="text" id="usr" name="usr"><br />
+				<label for="pass"><b>Password:</b></label>
+				<input type="password" id="pass" name="pass"><br /><br />
+				<input type="submit" value="Login" id="login">
 			</div>
-		</body>
+		<body>
 	</html>
-			
-		
