--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 			<link rel="stylesheet" href="css.css" type="text/css">
 		</head>
 		<body>
+			<div id="container">
+				<div id="navbar">
+					<ol>
+						<li>Home</li>
+						<li>About Me</li>
+						<li>Projects</li>
+						<li>Contact Me</li>
+					</ol>
+				</div>
+			</div>
 			<div class="abox">
 				<p><h1>This is list of projects made by me</h1></p>
 				<ol>
