--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		</head>
 		<body>
 			<div id="container">
+				<img src="img.jpg" alt="logo" id="logo">
 				<div id="navbar">
 					<ol>
 						<li>Home</li>
