--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 	<html>
 		<head><title>Projects by Avic0des</title>
 			<link rel="stylesheet" href="css.css" type="text/css">
+			<link rel="shortcut icon" href="logo.jpg" type="image/x-icon">
 		</head>
 		<body>
 			<div id="container">
-				<img src="img.jpeg" alt="logo" id="logo">
+				<img src="logo.jpeg" alt="logo" id="logo">
 				<div id="navbar">
 					<ol>
-						<li>Home</li>
-						<li>About Me</li>
-						<li>Projects</li>
-						<li>Contact Me</li>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">About Me</a></li>
+						<li><a href="#">Projects</a></li>
+						<li><a href="#">Contact Me</a></li>
 					</ol>
 				</div>
 			</div>
