--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<li><a href="loginpage/index.html">Login Page</a></li>
 					<li><a href="Loginpage1/index.html">Facebook mbasic Login Page</a></li>
 					<li><a href="flimproved/index.html">Facebook improved Login Page</a></li>
+                                        <li><a href="CV/index.html">CV using html tables</a></li>
 				</ol>
 			</div>
 		</body>
